--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     </div>
     <div class="footer">
         <div class="email">
-            <p>shivam.durgesh1999@gmail.com</p>
+            <a class="btn" href="shivam.durgesh1999@gmail.com">contact me</a>
         </div>
         <div class="utube">
-            <p>You tube- Shivam Education</p>
+            <a class="btn" href="https://www.youtube.com/channel/UC3s0dpwYlsjzK1U4dvqJctw">You tube- Shivam Education</a>
         </div><div class="insta">
-            <p>Insta-capturing_._world</p>
+            <a class="btn" href="https://www.instagram.com/capturing_._world/?utm_medium=copy_link">Insta-capturing_._world</a>
         </div>
 
     </div>
